# crypto-endurance

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
.github/workflows/: github-ci-cd.yaml
datasets/: BTC-USD.csv  multi_stock.csv
ipynb/: NextDayPrice.ipynb  NextDayTrend.ipynb  Playground.ipynb
ts/configs/gradient_boosting/: best.yaml  grid.yaml
ts/configs/linear_model/: best.yaml  grid.yaml
ts/configs/lstm/: best.yaml  grid.yaml
ts/configs/mlp/: best.yaml  grid.yaml
ts/configs/random_forest/: best.yaml  grid.yaml
ts/data/: collect.py  multi_stock.py  single_stock.py
ts/gui/: dashboard.py
ts/models/: __init__.py  base.py  gbr.py  linear_model.py  lstm.py  mlp.py  random_forest.py  test.py  train.py
weights/: gbr.json  linear_model.pkl  lstm.pt  lstm_params.yaml  mlp.pkl  random_forest.json  xgb_next_day_price.json  xgb_next_day_trend.json
