[tool.poetry]
name = "crypto-endurance"
version = "0.1.0"
description = "TS Prediction"
authors = ["Rus"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "3.11.4"
yfinance = "^0.2.22"
pydantic = "^2.0.2"
python-dotenv = "^1.0.0"
fredapi = "^0.5.0"
finta = "^1.3"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
