[tool.poetry]
name = "crypto-endurance"
version = "0.1.0"
description = "TS Prediction"
authors = ["Rus"]
readme = "README.md"
packages = [ { include = "ts" } ]

[tool.poetry.dependencies]
python = "3.11.4"
yfinance = "^0.2.22"
pydantic = "^2.0.2"
python-dotenv = "^1.0.0"
fredapi = "^0.5.0"
finta = "^1.3"
jupyter = "^1.0.0"
wandb = "^0.15.5"
scikit-learn = "^1.3.0"
xgboost = "^1.7.6"
tqdm = "^4.65.0"
streamlit = "^1.24.1"
pyyaml = "^6.0.1"
torch = {url = "https://download.pytorch.org/whl/cpu/torch-2.0.1%2Bcpu-cp311-cp311-linux_x86_64.whl"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
